--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "homepage": "https://github.com/Parvjain2003/lead-scoring-api#readme",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "multer": "^2.0.2",
+    "papaparse": "^5.5.3",
     "path": "^0.12.7",
     "uuid": "^13.0.0"
   },
